// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorIndicator matches snapshot (checked) 1`] = `
<div
  className="color-indicator "
  data-checked={true}
  style={
    Object {
      "--focus-border-color": "#8f7700",
      "--focus-outline-color": "var(--focus-outline-color)",
      "--focused-color": "#fed200",
      "--passive-color": "#ffff8a",
    }
  }
>
  <svg
    aria-hidden="true"
    className="color-indicator-check "
    viewBox="0 0 512 512"
  >
    <path
      d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
      fill="currentColor"
    />
  </svg>
  <span
    className="color-indicator-focus"
  />
  <span
    className="color-indicator-ring"
  />
</div>
`;

exports[`ColorIndicator matches snapshot 1`] = `
<div
  className="color-indicator "
  style={
    Object {
      "--focus-border-color": "#8f7700",
      "--focus-outline-color": "var(--focus-outline-color)",
      "--focused-color": "#fed200",
      "--passive-color": "#ffff8a",
    }
  }
>
  <svg
    aria-hidden="true"
    className="color-indicator-check "
    viewBox="0 0 512 512"
  >
    <path
      d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
      fill="currentColor"
    />
  </svg>
  <span
    className="color-indicator-focus"
  />
  <span
    className="color-indicator-ring"
  />
</div>
`;
